--- a/web/index.html
+++ b/web/index.html
@@ -164,8 +164,6 @@
     </div>
 </div>
 
-<script src="config.js"></script>
-<script src="chart-engine.js"></script>
-<script src="app.js"></script>
+<script type="module" src="dist/app.js"></script>
 </body>
 </html>
