--- a/web/index.html
+++ b/web/index.html
@@ -129,6 +129,7 @@
             <span class="badge">Engine v2</span>
         </div>
         <div class="controls">
+            <label for="pairSelector" style="display: none;">Select Trading Pair</label>
             <select id="pairSelector">
                 <option value="">Loading...</option>
             </select>
