--- a/web/index.html
+++ b/web/index.html
@@ -189,6 +189,6 @@
     </div>
 </div>
 
-<script type="module" src="dist/app.js"></script>
+<script type="module" src="dist/app.js?v=1761725047"></script>
 </body>
 </html>
