--- a/web/index.html
+++ b/web/index.html
@@ -158,9 +158,12 @@
                 <option value="">Loading...</option>
             </select>
 
-            <div class="timeframe-indicator">
-                <span>Timeframe:</span>
-                <span class="timeframe-badge" id="currentTimeframe">1d</span>
+            <div class="timeframe-controls">
+                <button class="nav-btn" id="navLeft" title="Navigate left">◀</button>
+                <select id="timeframeSelector" class="timeframe-dropdown">
+                    <option value="">Select timeframe...</option>
+                </select>
+                <button class="nav-btn" id="navRight" title="Navigate right">▶</button>
             </div>
         </div>
     </div>
